# Dating_App_AI

ai_app/: .env.example  main.py  pyproject.toml
ai_app/database/: __init__.py
ai_app/models/: __init__.py
ai_app/nodes/: __init__.py
ai_app/prompts/: __init__.py
ai_app/tools/: __init__.py
ai_app/workflow/: __init__.py
main_app/: .env.example  .gitignore  app.json  bun.lockb  package.json  tsconfig.json
main_app/app/: _layout.tsx
main_app/app/(auth)/: login.tsx  register.tsx
main_app/app/(setup)/: _layout.tsx  iam.tsx  index.tsx  interests.tsx
main_app/app/(stack)/: _layout.tsx
main_app/app/(stack)/account/: [id].tsx
main_app/app/(stack)/profile/: [id].tsx
main_app/app/(stack)/security/: [id].tsx
main_app/app/(stack)/story/: [id].tsx
main_app/app/(tabs)/: _layout.tsx  chat.tsx  friend.tsx  heart.tsx  home.tsx  setting.tsx
main_app/assets/icons/: Calenda.tsx  Camera.tsx  index.ts
main_app/components/: Alert.tsx  ImageViewer.tsx  InputField.tsx
main_app/components/Chat/: ChatDialog.tsx
main_app/components/ChatbotPopup/: index.tsx
main_app/components/Home/: ActionButtons.tsx  Card.tsx  Filters.tsx  index.tsx  index_best.tsx
main_app/components/Story/: UpStoryDialog.tsx
main_app/redux/: store.ts
main_app/redux/selectors/: message.ts
main_app/redux/slices/: auth.ts  feeds.ts  friend.ts  index.ts  interactions.ts  message.ts  user.ts
main_app/redux/thunks/: auth.ts  feeds.ts  friend.ts  interactions.ts  message.ts  user.ts
main_app/types/: auth.ts  feed.ts  filter.ts  index.ts
main_app/utils/: imageUtils.tsx  supabase.ts
